# nuernberg-top-events

./: .gitignore  AGENTS.md  LICENSE  README.md  nuernberg_top_events.ical  nuernberg_top_events.py  pyproject.toml  test_nuernberg_top_events.py
.github/workflows/: update-calendar.yml
