[project]
name = "nuernberg-top-events"
version = "0.1.0"
description = "Parse Nürnberg Top Events and generate iCal files"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "icalendar>=7.0.1",
]

[project.scripts]
"nuernberg-top-events" = "nuernberg_top_events:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pyright>=1.1.408",
    "ruff>=0.15.1",
]
